# Contours-in-Gray-Scale-Images

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.29cb13a  Makefile  README.md  cmake_install.cmake  contDetector.cpp  contDetector.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
